projects/terraform-infra/kubernetes-app/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mywebsite-app
  name: mywebsite-app
  namespace: douglas-k8s-demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mywebsite-app
  type: ClusterIP
